<resources>
    <string name="app_name">banking_app</string>
    <string name="filler">TextView</string>
    <string name="tab_text_1">Transactions</string>
    <string name="tab_text_2">Cards</string>
    <string name="tab_text_3">Details</string>
    <string name="name">Name</string>
    <string name="settings">Change password</string>
    <string name="about">About</string>
    <string name="editprof">Edit profile</string>
    <!-- for edit -->
    <string name="fNameEdit"></string>
    <string name="sNameEdit"></string>
    <string name="emailEdit"></string>
    <string name="cnpEdit"></string>
    <string name="userName"></string>

    <string name="open_account_paragraph">You can open a new account from the application right now. Just choose the currency you want for your account!</string>
    <string name="open_account">Open account</string>
    <string name="holder_title">Holder</string>
    <string name="account">Account</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="email">E-mail</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="balance">Balance</string>
    <string name="interest_rate">Interest rate</string>
    <string name="months">Months</string>
    <string name="renewal">Renewal</string>
    <string name="due_date">Due date</string>
    <string name="iban_label">IBAN: </string>
    <string name="currency_label">Currency: </string>
    <string name="due_date_label">Due date: </string>
    <string name="months_label">Months: </string>
    <string name="balance_label">Balance: </string>
    <string name="interest_rate_label">Interest rate: </string>
    <string name="account_type_label">Type: </string>
    <string name="renewal_label">Renewal: </string>
    <string name="owner_label">Owner: </string>
    <string name="bic_label">BIC: </string>
    <string name="email_label">E-mail: </string>
    <string name="account_button">Open new account</string>
    <string name="overview_accounts">Accounts</string>
    <string name="overview_cards">Cards</string>
    <string name="transactions_title">Transactions</string>
    <string name="cards_title">Cards</string>
    <string name="details_title">Details</string>
    <string name="nav_overview">Overview</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>